# python-lakehouse-stack

./: .gitignore  README.md  pyproject.toml
docs/: duckdb_cli_guide.md  duckdb_file_formats.md  duckdb_overview.md  duckdb_persistence.md  duckdb_zero_copy.md  folder_structure.md  index.md  level_1_ingestion.md  level_2_outputs.md  level_3_architecture.md  roadmap.md
notebooks/: 00_playground.ipynb
scripts/: generate_raw_data.py
src/01_file_formats/: ingest_cloud.py  ingest_csv.py  ingest_excel.py  ingest_http.py  ingest_json.py  ingest_postgres.py
src/02_outputs/: to_arrow.py  to_pandas.py  to_polars.py
src/03_lakehouse/: delta_ops.py  iceberg_ops.py
src/app/: database.py  main.py
